update branches name

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@ name: main branch auto ci process script
 
 on: # 아래 job을 실행시킬 상황
   push:
-    branches: [ main]
+    branches: ['main']
 
 jobs:
   deploy:
